Fix layout issue with hero caption

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -16,6 +16,8 @@
 .hero-image-caption {
   float: right;
   margin-right: 1em;
+  text-align: right;
+  width: 100%;
 }
 
 .main-header {
@@ -70,7 +72,7 @@
     a {
       color: white;
       display: block;
-      font-size: 1.2em;
+      font-size: 1em;
 
       &:hover {
         color: $brand-color;
